[gd_scene load_steps=8 format=2]

[ext_resource path="res://image/menu/start_menu/start_back.png" type="Texture" id=1]
[ext_resource path="res://fonts/Play-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://image/menu/start_menu/start_button.png" type="Texture" id=3]
[ext_resource path="res://scripts/start_menu/start_menu.gd" type="Script" id=4]
[ext_resource path="res://nodes/system/szene_changer.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 77
font_data = ExtResource( 2 )

[node name="start_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_back" type="Sprite" parent="."]
position = Vector2( 962.099, 540.143 )
scale = Vector2( 1.01286, 1.02494 )
texture = ExtResource( 1 )

[node name="text" type="Node2D" parent="."]

[node name="version" type="Label" parent="text"]
margin_left = -172.579
margin_top = 960.214
margin_right = 500.421
margin_bottom = 1061.21
custom_fonts/font = SubResource( 1 )
text = "Version 0.5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="RichTextLabel" parent="text"]
margin_left = 751.0
margin_top = 90.0
margin_right = 1154.0
margin_bottom = 204.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "New Game"
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="RichTextLabel" parent="text"]
margin_left = 736.217
margin_top = 349.133
margin_right = 1174.22
margin_bottom = 468.133
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Load Game"
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_events" type="RichTextLabel" parent="text"]
visible = false
margin_left = -37.4081
margin_top = 613.175
margin_right = 400.592
margin_bottom = 732.175
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Edit events"
text = "Edit events"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="RichTextLabel" parent="text"]
margin_left = 737.899
margin_top = 629.993
margin_right = 1175.9
margin_bottom = 748.993
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Quit game"
text = "Quit game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Node2D" parent="."]

[node name="start" type="TextureButton" parent="button"]
margin_left = 593.045
margin_top = 22.3182
margin_right = 1278.05
margin_bottom = 264.318
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="TextureButton" parent="button"]
margin_left = 589.682
margin_top = 286.36
margin_right = 1274.68
margin_bottom = 528.36
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_events" type="TextureButton" parent="button"]
visible = false
margin_left = -121.716
margin_top = 553.765
margin_right = 563.284
margin_bottom = 795.765
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="TextureButton" parent="button"]
margin_left = 589.682
margin_top = 562.174
margin_right = 1274.68
margin_bottom = 804.174
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="szene_changer" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="mouse_entered" from="button/start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="button/start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="button/start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="button/load" to="." method="_on_load_mouse_entered"]
[connection signal="mouse_exited" from="button/load" to="." method="_on_load_mouse_exited"]
[connection signal="pressed" from="button/load" to="." method="_on_load_pressed"]
[connection signal="mouse_entered" from="button/edit_events" to="." method="_on_edit_events_mouse_entered"]
[connection signal="mouse_exited" from="button/edit_events" to="." method="_on_edit_events_mouse_exited"]
[connection signal="pressed" from="button/edit_events" to="." method="_on_edit_events_pressed"]
[connection signal="mouse_entered" from="button/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="button/quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="button/quit" to="." method="_on_quit_pressed"]
